--- a/Pizza.html
+++ b/Pizza.html
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <title>Pizza Form</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="stylesheet.css">
+    <script src="main.js"></script>
 </head>
 <body>
 <body onload="hideTotal()">
